# sleuthkit

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  API-CHANGES.txt  CHANGES.txt  ChangeLog.txt  INSTALL.txt  Makefile.am  Makefile.in  NEWS.txt  README.md  README.txt  README_win32.txt  THIRDPARTYLICENSEREADME.txt  TODO.txt  acinclude.m4  appveyor.yml  ax_pthread.m4  bootstrap  codecov.yml  configure  configure.ac  install-sleuthkit.sh  ruleset.xml  setupDevRepos.py  setupLibs.py  travis_build.sh  travis_install_libs.sh
bindings/java/: Makefile.am  README.txt  build-unix.xml  build-windows.xml  build.xml  highlghts.txt  ivy.xml  ivysettings.xml  xp-sp3-v4.001_Diff.txt
case-uco/java/: Makefile.am  README.md  build.xml  ivy.xml  ivysettings.xml  pom.xml
framework/: BUILDING.txt  INSTALL.txt  INSTALL_unix.txt  INSTALL_win.txt  Makefile.am  NEWS.txt  README_bindist.txt  RUNNING_msvs.txt  RUNNING_unix.txt  TskModuleDev.h  TskVersionInfo.h  aclocal.m4  bootstrap  config.h.in  configure.ac  framework.h  framework_i.h
framework/Extraction/: CarveExtract.cpp  CarveExtract.h  CarvePrep.cpp  CarvePrep.h  TskAutoImpl.cpp  TskAutoImpl.h  TskCarveExtractScalpel.cpp  TskCarveExtractScalpel.h  TskCarveParams.h  TskCarvePrepSectorConcat.cpp  TskCarvePrepSectorConcat.h  TskExtract.cpp  TskExtract.h  TskExtractInterface.cpp  TskExtractInterface.h  TskImageFile.cpp  TskImageFile.h  TskImageFileTsk.cpp  TskImageFileTsk.h  TskL01Extract.cpp  TskL01Extract.h
framework/File/: FileManager.cpp  TskFile.cpp  TskFile.h  TskFileManager.h  TskFileManagerImpl.cpp  TskFileManagerImpl.h  TskFileTsk.cpp  TskFileTsk.h
framework/Pipeline/: TskExecutableModule.cpp  TskExecutableModule.h  TskFileAnalysisPipeline.cpp  TskFileAnalysisPipeline.h  TskFileAnalysisPluginModule.cpp  TskFileAnalysisPluginModule.h  TskModule.cpp  TskModule.h  TskPipeline.cpp  TskPipeline.h  TskPipelineManager.cpp  TskPipelineManager.h  TskPluginModule.cpp  TskPluginModule.h  TskReportPipeline.cpp  TskReportPipeline.h  TskReportPluginModule.cpp  TskReportPluginModule.h
framework/Reporting/: Report.cpp  Report.h
framework/SampleConfig/: framework_config.xml  framework_config_bindist.xml  framework_config_linuxdev.xml  framework_config_macdev.xml  framework_config_template.xml  framework_config_unixdev.xml  framework_config_win32dev.xml  pipeline_config.xml  pipeline_config_template.xml
framework/Services/: Log.cpp  Log.h  Scheduler.cpp  Scheduler.h  TskBlackBoardAttribute.h  TskBlackboard.cpp  TskBlackboard.h  TskBlackboardArtifact.cpp  TskBlackboardArtifact.h  TskBlackboardAttribute.cpp  TskDBBlackboard.cpp  TskDBBlackboard.h  TskImgDB.cpp  TskImgDB.h  TskImgDBPostgreSQL.cpp  TskImgDBSqlite.cpp  TskImgDBSqlite.h  TskSchedulerQueue.cpp  TskSchedulerQueue.h  TskServices.cpp  TskServices.h  TskSystemProperties.cpp  TskSystemProperties.h  TskSystemPropertiesImpl.cpp  TskSystemPropertiesImpl.h
framework/TskModules/: README.txt
framework/Utilities/: Makefile.am  SectorRuns.cpp  SectorRuns.h  TskException.cpp  TskException.h  TskUtilities.cpp  TskUtilities.h  UnallocRun.cpp  UnallocRun.h
framework/ValidatePipeline/: ValidatePipeline.cpp
framework/docs/: Doxyfile  basics.dox  build-man.pl  fileToDoxPage.py  footer.html  fw_examples.dox  fw_extract.dox  fw_pipelines.dox  fw_setup.dox  img_db_schema_v1_5.dox  main.dox  module_blackboard.dox  module_dev.dox  module_examples.dox  pipeline.dox  sample_pipeline_config_file.dox  tsk_analyzeimg.1.md  tsk_validatePipeline.1.md
framework/man/: tsk_analyzeimg.1  tsk_analyzeimg.html  tsk_validatePipeline.1  tsk_validatePipeline.html
framework/modules/: Makefile.am
framework/msvcpp/: BUILDING.txt  Makefile  build-deps.pl
framework/tools/: Makefile.am
framework/tsk_analyzeimg/: tsk_analyzeimg.cpp
framework/tsk_validatepipeline/: tsk_validatepipeline.cpp
framework/win32/: Makefile
ossfuzz/: Makefile.am  fls_apfs_fuzzer.cc  fls_fuzzer.cc  mem_img.h  mmls_fuzzer.cc
samples/: Makefile.am  Makefile.in  callback-cpp-style.cpp  callback-style.cpp  posix-cpp-style.cpp  posix-style.cpp
tests/: .gitignore  Makefile.am  Makefile.in  README.md  fiwalk_test.cpp  fs_attrlist_apis.cpp  fs_fname_apis.cpp  fs_thread_test.cpp  get_dftt.bash  get_test_images.bash  get_test_images.py  img_dump.cpp  imgs_to_dump.in  read_apis.cpp  runtests.sh  test_fls.sh  test_images.yaml  test_imgs.sh  test_libraries.sh  test_static_tools.sh  tsk_thread.cpp  wine_wrapper.sh
tests/dftt/: 2-fat-img-kw.dd.bodyfile  3-ntfs-img-kw-1.dd.bodyfile  4-ext3-img-kw-1.dd.bodyfile
tools/: Makefile.am  Makefile.in  util.cpp  util.h
tools/autotools/: LogicalImagerConfig.cpp  LogicalImagerConfig.h  LogicalImagerDateRule.cpp  LogicalImagerDateRule.h  LogicalImagerExtensionRule.cpp  LogicalImagerExtensionRule.h  LogicalImagerFilenameRule.cpp  LogicalImagerFilenameRule.h  LogicalImagerPathRule.cpp  LogicalImagerPathRule.h  LogicalImagerRule.h  LogicalImagerRuleBase.cpp  LogicalImagerRuleBase.h  LogicalImagerRuleSet.cpp  LogicalImagerRuleSet.h  LogicalImagerSizeRule.cpp  LogicalImagerSizeRule.h  Makefile.am  Makefile.in  RuleMatchResult.cpp  RuleMatchResult.h  TskFindFiles.cpp  TskFindFiles.h  TskHelper.cpp  TskHelper.h  config-with-bad-syntax.json  tsk_comparedir.cpp  tsk_comparedir.h  tsk_gettimes.cpp  tsk_imageinfo.cpp  tsk_loaddb.cpp  tsk_logical_imager.cpp  tsk_recover.cpp  tsk_recover.h
tools/disktools/: Makefile.am  disk_ide.h  disk_sreset.cpp  disk_stat.cpp  ide.c
tools/fiwalk/: AUTHORS  BUGLIST.txt  COPYING  ChangeLog  DISTRIBUTION_LIST.txt  Makefile.am  Makefile.in  NEWS  README  TODO  arff.html  ax_pthread.m4  bootstrap.sh  checkversion.py  configure.ac  load_sql.py  make_mingw.sh  problems.txt  ttd.dfxml.1  wc.patch
tsk/: Makefile.am  libtsk.h  tsk.pc.in  tsk_config.h.in  tsk_tools_i.h
tsk3/: Makefile.am  Makefile.in  libtsk.h  tsk_config.h.in  tsk_incs.h  tsk_tools_i.h
unit_tests/: Makefile  Makefile.am  Makefile.in  README.md  crypto_test.cpp  errors_test.cpp  fiwalk_test.cpp  get_test_images.bash  get_test_images.py  mult_files_test.cpp  remove_creator.py  runner.cpp  test_images.yaml
(+2122 files in other folders)
